--- a/package.json
+++ b/package.json
@@ -8,34 +8,40 @@
     "company": "Tryon Creek Software LLC"
   },
   "dependencies": {
-    "body-parser": "^1.4.3",
-    "connect-flash": "0.1.x",
-    "connect-mongo": "0.4.x",
-    "cookie-parser": "^1.3.2",
-    "cookie-session": "^1.0.2",
-    "express": "3.12.x",
-    "express-session": "1.6.x",
-    "i18next": "1.7.x",
-    "mongo-session": "0.2.x",
-    "mongoose": "3.8.x",
-    "passport": "0.2.x",
+    "axios": "^1.8.0",
+    "body-parser": "^1.20.3",
+    "compression": "^1.8.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.0",
+    "dotenv": "^16.4.7",
+    "express": "4.21.x",
+    "express-session": "1.18.x",
+    "fs": "^0.0.1-security",
+    "mongoose": "8.10.x",
+    "morgan": "^1.10.0",
+    "openai": "^4.85.4",
+    "passport": "0.7.x",
     "passport-local": "1.0.x",
-    "python-shell": "0.0.3",
-    "underscore": "1.6.x"
+    "python-shell": "5.0.0",
+    "serve-favicon": "^2.5.0",
+    "underscore": "1.13.x",
+    "vscode": "^1.1.34"
   },
   "devDependencies": {
-    "chai": "1.9.x",
-    "coffee-script": "1.7.x",
-    "grunt-autoprefixer": "^1.0.1",
-    "grunt-contrib-compass": "^1.0.1",
-    "install": "^0.1.7",
-    "mocha": "1.20.x",
-    "npm": "^2.1.7",
-    "sinon": "1.10.x"
+    "chai": "5.2.x",
+    "coffee-script": "1.12.x",
+    "grunt-autoprefixer": "^0.4.2",
+    "grunt-contrib-compass": "^0.8.0",
+    "install": "^0.13.0",
+    "mocha": "11.1.x",
+    "npm": "^11.1.0",
+    "sinon": "19.0.x"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.4.x"
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "scripts": {
     "start": "node server.js",
