Saved NRGSIM bug fixes before Zorro integration

--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "express": "4.21.x",
     "express-session": "1.18.x",
     "fs": "^0.0.1-security",
+    "i18next": "^24.2.2",
+    "i18next-express-middleware": "^2.0.0",
+    "i18next-fs-backend": "^2.6.0",
+    "i18next-http-middleware": "^3.7.1",
     "mongoose": "8.10.x",
     "morgan": "^1.10.0",
     "openai": "^4.85.4",
-    "passport": "0.7.x",
+    "passport": "^0.7.0",
     "passport-local": "1.0.x",
     "python-shell": "5.0.0",
     "serve-favicon": "^2.5.0",
